<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2013-2017 Metin Kale
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="appName">Prayer Times</string>
    <string name="backup">Backup</string>
    <string name="backupRestore">Backup/Restore</string>
    <string name="calendar">Holy Days</string>
    <string name="calendarIntegration">Calendar Integration</string>
    <string name="cancel">Cancel</string>
    <string name="compass">Prayer Compass</string>
    <string name="dateAndTime">Date and Time</string>
    <string name="dateFormat1">31 December 2013</string>
    <string name="dateFormat2">31 December 13</string>
    <string name="dateFormat">Date Format</string>
    <string name="delete">Delete</string>
    <string name="dhikr">Dhikr</string>
    <string name="error">An error occurred</string>
    <string name="gmonth1">January</string>
    <string name="gmonth2">February</string>
    <string name="gmonth3">March</string>
    <string name="gmonth4">April</string>
    <string name="gmonth5">May</string>
    <string name="gmonth6">June</string>
    <string name="gmonth7">July</string>
    <string name="gmonth8">August</string>
    <string name="gmonth9">September</string>
    <string name="gmonth10">October</string>
    <string name="gmonth11">November</string>
    <string name="gmonth12">December</string>
    <string name="hadith">Sahih al-Bukhary</string>
    <string name="hDateFormat1">30 Muharram 1434</string>
    <string name="hDateFormat2">30 Muharram 34</string>
    <string name="hdateFormat">Hijri Date Format</string>
    <string name="hijriFix">Hijri Date adjustment</string>
    <string name="hmonth1">Muharram</string>
    <string name="hmonth2">Safar</string>
    <string name="hmonth3">Rabi al-awwal</string>
    <string name="hmonth4">Rabi al-achir</string>
    <string name="hmonth5">Jumada al-awwal</string>
    <string name="hmonth6">Jumada l-akhira</string>
    <string name="hmonth7">Rajab</string>
    <string name="hmonth8">Shaban</string>
    <string name="hmonth9">Ramadan</string>
    <string name="hmonth10">Shawwal</string>
    <string name="hmonth11">Dhu l-Qaʿda</string>
    <string name="hmonth12">Dhū l-Hijja</string>
    <string name="holyday1">Islamic New Year</string>
    <string name="holyday2">Ashura</string>
    <string name="holyday3">Mawlid al-Nabi</string>
    <string name="holyday4">Beginning of the three sacred months</string>
    <string name="holyday5">Laylat ul Ragaib</string>
    <string name="holyday6">Laylat ul Isra and Miraj</string>
    <string name="holyday7">Laylat ul Bara’ah</string>
    <string name="holyday8">Ramadan begins</string>
    <string name="holyday9">Laylat al-Qadr</string>
    <string name="holyday10">(Arafat of Eid al-Fitr)</string>
    <string name="holyday11">Eid al-Fitr 1st day</string>
    <string name="holyday12">Eid al-Fitr 2nd day</string>
    <string name="holyday13">Eid al-Fitr 3rd day</string>
    <string name="holyday14">Arafat Day</string>
    <string name="holyday15">Eid al-Adha  1st day</string>
    <string name="holyday16">Eid al-Adha  2nd day</string>
    <string name="holyday17">Eid al-Adha  3rd day</string>
    <string name="holyday18">Eid al-Adha  4th day</string>
    <string name="kerahatDuration">Makruh Time - Duration</string>
    <string name="kerahatIstiwa">Istiwa Time (before Zuhr Prayer) </string>
    <string name="kerahatMaghrib">Sunset (before Maghrib Prayer)</string>
    <string name="kerahatSun">Sunrise (after Morning Prayer)</string>
    <string name="language">Language</string>
    <string name="missedPrayers">Missed Prayers</string>
    <string name="names">99 Names of Allah</string>
    <string name="notification">Notification</string>
    <string name="ok">OK</string>
    <string name="ongoingIcon">Notification-Icon</string>
    <string name="ongoingNotification">Notification-Widget</string>
    <string name="other">Other</string>
    <string name="permissionCalendarText">If you want, that the Holy Days appear in your Phone Calendar, you have to allow Calendar Access. Otherwise do not.</string>
    <string name="permissionCalendarTitle">Calendar Berechtigung</string>
    <string name="permissionCameraText">To use 3D-Compass, you need to allow Camera access. Otherwise you will only be able to use the 2D-Compass.</string>
    <string name="permissionCameraTitle">Camera Permission</string>
    <string name="permissionLocationText">Location Permission is needed, to find your City. If you don\'t allow this App, to access your Location, you have to search for your City manually.</string>
    <string name="permissionLocationTitle">Location Permission</string>
    <string name="permissionStorageText">Storage Permission is needed. Without that Permission some things will not work.</string>
    <string name="permissionStorageTitle">Storage Permission</string>
    <string name="prayerNotification">Prayer Notification</string>
    <string name="restore">Restore</string>
    <string name="settings">Settings</string>
    <string name="silenterType">Silent Mode</string>
    <string name="sound">Sound</string>
    <string name="tesbihat">Tasbeehat</string>
    <string name="test">Try</string>
    <string name="use12h">Use 12 Hours Format</string>
    <string name="useArabicNames">Use Arabic Prayertimes</string>
    <string name="useSilenter">Silent</string>
    <string name="useVibration">Vibration</string>
    <string name="version">Version</string>
    <string name="vibrationDesc">Miliseconds - wait vibrate wait…</string>
    <string name="vibrationPattern">Vibration pattern</string>
    <string name="widgetCountdownType">Widget - Countdown Minutes</string>
    <string name="numbers">Digits</string>
    <string name="dateFormat3">31 December </string>
    <string name="hDateFormat3">30 Muharram </string>
    <string name="useAlarm">Use Alarm for Notification</string>
    <string name="useAlarmDesc">EXPERIMENTAL - If Notifications are not triggered in time, you can try this Setting. An
        alarm clock icon will be added to the Status bar!
    </string>
    <string name="ongoingNumber">Show minutes in Notification-Icon</string>
    <string name="vakit_indicator">Prayertime indicator</string>
    <string name="vakit_indicator_next">Next prayertime</string>
    <string name="vakit_indicator_current">Current prayertime</string>
    <string name="show_notification_screen">Show Notification Screen</string>
    <string name="autoremove_notification">Remove Notification after Adhan</string>
    <string name="about">About</string>
    <string name="stopFacedown">Stop Sound by turning the screen face down.</string>
    <string name="widget_current_vakit">Widget - Alternative Current Time indicator</string>
    <string name="widget">Widget</string>
    <string name="showLegacyWidgets">Show legacy Widgets</string>
    <string name="showLegacyWidgetsSummary">Only use if you have problems with your Widgets</string>
    <string name="showExtraTimes">Show Morning Prayer and Asr Sani</string>
    <string name="showExtraTimesSummary">Only for FaziletTakvimi.com, NamazVakti.com and Calculated</string>
    <string name="systemLang">System language</string>


</resources>