<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2013-2017 Metin Kale
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<!--suppress AndroidDomInspection, AndroidDomInspection, AndroidDomInspection, AndroidDomInspection, AndroidDomInspection -->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <PreferenceCategory android:title="@string/appName">


        <ListPreference
            android:dialogTitle="@string/language"
            android:entries="@array/language"
            android:entryValues="@array/language_val"
            android:key="language"
            android:title="@string/language" />
        <SwitchPreference
            android:key="arabicNames"
            android:title="@string/useArabicNames" />

        <ListPreference
            android:entries="@array/numbers"
            android:entryValues="@array/numbers_keys"
            android:key="numbers"
            android:title="@string/numbers" />


        <com.metinkale.prayer.calendar.CalendarPreference
            android:defaultValue="1"
            android:key="calendarIntegration"
            android:title="@string/calendarIntegration" />

        <PreferenceScreen
            android:key="kerahatDuration"
            android:title="@string/kerahatDuration">
            <com.metinkale.prayer.settings.NumberPickerPreference
                android:defaultValue="45"
                android:key="kerahat_sunrise"
                android:title="@string/kerahatSun"
                app:maxValue="120"
                app:minValue="0" />

            <com.metinkale.prayer.settings.NumberPickerPreference
                android:defaultValue="45"
                android:key="kerahat_istiva"
                android:title="@string/kerahatIstiwa"
                app:maxValue="120"
                app:minValue="0" />


            <com.metinkale.prayer.settings.NumberPickerPreference
                android:defaultValue="45"
                android:key="kerahat_sunset"
                android:title="@string/kerahatMaghrib"
                app:maxValue="120"
                app:minValue="0" />


        </PreferenceScreen>

        <ListPreference
            android:defaultValue="current"
            android:dialogTitle="@string/vakit_indicator"
            android:entries="@array/vakit_indicator"
            android:entryValues="@array/vakit_indicator_values"
            android:key="vakit_indicator"
            android:title="@string/vakit_indicator" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/widget">
        <ListPreference
            android:defaultValue="default"
            android:dialogTitle="@string/widgetCountdownType"
            android:entries="@array/widget_countdown"
            android:entryValues="@array/widget_countdown_"
            android:key="widget_countdown"
            android:title="@string/widgetCountdownType" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="showAltWidgetHightlight"
            android:title="@string/widget_current_vakit" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="showLegacyWidgets"
            android:summary="@string/showLegacyWidgetsSummary"
            android:title="@string/showLegacyWidgets" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/dateAndTime">


        <SwitchPreference
            android:key="use12h"
            android:title="@string/use12h" />
        <ListPreference
            android:dialogTitle="@string/dateFormat"
            android:entries="@array/greg_text"
            android:entryValues="@array/df"
            android:key="dateformat"
            android:title="@string/dateFormat" />

        <ListPreference
            android:dialogTitle="@string/hdateFormat"
            android:entries="@array/hicri_text"
            android:entryValues="@array/df"
            android:key="hdateformat"
            android:title="@string/hdateFormat" />


        <ListPreference
            android:dialogTitle="@string/hijriFix"
            android:entries="@array/hijri_fix_days"
            android:entryValues="@array/hijri_fix_days"
            android:key="hijri_fix"
            android:title="@string/hijriFix" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notification">
        <com.metinkale.prayer.settings.VibrationPreference
            android:defaultValue="0 300 150 300 150 500"
            android:dialogTitle="@string/vibrationDesc"
            android:key="vibration"
            android:title="@string/vibrationPattern" />


        <SwitchPreference
            android:defaultValue="true"
            android:key="ongoingIcon"
            android:title="@string/ongoingIcon" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="ongoingIcon"
            android:key="ongoingNumber"
            android:title="@string/ongoingNumber" />



        <SwitchPreference
            android:defaultValue="true"
            android:key="notificationScreen"
            android:title="@string/show_notification_screen" />


        <SwitchPreference
            android:defaultValue="false"
            android:key="stopFacedown"
            android:title="@string/stopFacedown" />


        <SwitchPreference
            android:defaultValue="false"
            android:key="useAlarm"
            android:summary="@string/useAlarmDesc"
            android:title="@string/useAlarm" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/other">


        <Preference
            android:key="backupRestore"
            android:title="@string/backupRestore" />

    </PreferenceCategory>
</androidx.preference.PreferenceScreen>